--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <div id="root"></div>
+        <div id="root2"></div>
         <script src="app.js" type="text/babel"></script>
     </body>
 </html>
